--- a/hello_flask/static/client_time.html
+++ b/hello_flask/static/client_time.html
@@ -4,10 +4,16 @@
         <!-- head definitions go here -->
 	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     </head>
-    <body>
+    
+	    <body style="background-image: url('https://ichef.bbci.co.uk/news/976/cpsprodpb/158D1/production/_115537288_hi000618024.jpg');">
+
 	    <h1 id="mytime"></h1>
-	<script>
+	    <center> No better way to wake up. Cats + TikTok </center>
+	<script>	
 		setInterval( function(){ $('#mytime').html( "Time is " + new Date());}, 500);
 	</script>
+    	
+	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@tommyandthetortoises/video/6981449142279179521" data-video-id="6981449142279179521" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@tommyandthetortoises" href="https://www.tiktok.com/@tommyandthetortoises">@tommyandthetortoises</a> <p><a title="catoftiktok" target="_blank" href="https://www.tiktok.com/tag/catoftiktok">#catoftiktok</a> <a title="cat" target="_blank" href="https://www.tiktok.com/tag/cat">#cat</a> <a title="cutecat" target="_blank" href="https://www.tiktok.com/tag/cutecat">#cutecat</a> <a title="fyp" target="_blank" href="https://www.tiktok.com/tag/fyp">#fyp</a> <a title="foryoupage" target="_blank" href="https://www.tiktok.com/tag/foryoupage">#foryoupage</a> <a title="catlover" target="_blank" href="https://www.tiktok.com/tag/catlover">#catlover</a> <a title="viral" target="_blank" href="https://www.tiktok.com/tag/viral">#viral</a></p> <a target="_blank" title="♬ time fo scoo - braden🦓" href="https://www.tiktok.com/music/time-fo-scoo-6876881822102424326">♬ time fo scoo - braden🦓</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+		
     </body>
 </html>
